<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="20dp"
    tools:context=".BButton">

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            android:layout_marginEnd="15dp">

            <Button
                android:id="@+id/button1_1"
                android:background="@color/purple_200"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_2_1"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/button1_12"
                android:background="@color/purple_200"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_2_2"
                android:textAllCaps="false"
                android:textSize="14sp"/>

                <Button
                android:id="@+id/button1_13"
                android:background="@color/purple_200"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_2_3"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/button1_14"
                android:background="@color/purple_200"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_2_4"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/button1_15"
                android:background="@color/purple_200"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_2_5"
                android:textAllCaps="false"
                android:textSize="14sp"/>


        </LinearLayout>

    </ScrollView>
</ScrollView>
